--- a/app/views/director_templates/show.html.erb
+++ b/app/views/director_templates/show.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Director #<%= @the_director.id %> details
+  <%= @the_director.name_with_dob %>
 </h1>
 
 <a href="/directors">
@@ -82,13 +82,13 @@
     </th>
   </tr>
 
-  <% the_id = @the_director.id %>
+  <%# the_id = @the_director.id %>
 
-  <% matching_movies = Movie.where({ :director_id => the_id }) %>
+  <%# matching_movies = Movie.where({ :director_id => the_id }) %>
   
-  <% films = matching_movies.order({ :year => :asc }) %>
+  <%# films = matching_movies.order({ :year => :asc }) %>
 
-  <% films.each do |a_movie| %>
+  <% @the_director.filmography.each do |a_movie| %>
   <tr>
     <td>
       <%= a_movie.id %>
