--- a/app/views/movie_templates/show.html.erb
+++ b/app/views/movie_templates/show.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Movie #<%= @the_movie.id %> details
+  <%= @the_movie.title_with_year %>
 </h1>
 
 <a href="/movies">
@@ -47,12 +47,12 @@
   <dt>
     Director
   </dt>
-  <dd>
-    <% matching_directors = Director.where({ :id => @the_movie.director_id }) %>
-    
-    <% the_director = matching_directors.at(0) %>
-
-    <%= the_director.name %>
+  <dd> 
+    <%#= matching = Director.where({ :id => d_id})%>
+    <%# d = matching.at(0) %>
+    <%#= d.name %>
+    <%#= @the_movie.title_with_year %>
+    <%= @the_movie.director.name %>
   </dd>
 
   <dt>
