--- a/app/views/director_templates/show.html.erb
+++ b/app/views/director_templates/show.html.erb
@@ -86,9 +86,9 @@
 
   <%# matching_movies = Movie.where({ :director_id => the_id }) %>
   
-  <%# films = matching_movies.order({ :year => :asc }) %>
+  <% films = @the_director.filmography.order({ :year => :asc }) %>
 
-  <% @the_director.filmography.each do |a_movie| %>
+  <% films.each do |a_movie| %>
   <tr>
     <td>
       <%= a_movie.id %>
